metadata/force-app/main/default/objects/CustomName_XsmLV__c/CustomName_XsmLV__c.object-meta.xml
<CustomObject>
    <description>Description_uansq</description>
    <label>CustomLabel_hbGAG</label>
    <nameField>
        <label>CustomLabel_hbGAG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_hbGAGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>