metadata/force-app/main/default/objects/CustomName_XsmLV__c/fields/CustomField_AgLSC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AgLSC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldaklxh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>