metadata/force-app/main/default/objects/CustomName_XsmLV__c/fields/CustomField_TReWN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TReWN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFtesp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>